--- a/css/animate.css
+++ b/css/animate.css
@@ -683,9 +683,8 @@ body{
   }
 
 
-  @media (300px <= width <= 498px) {
+  @media (300px <= width <= 499px) {
     
-
     #cardFimg, #cardFeat:hover #cardFimg{
         width: 100%;
         display: flex;
@@ -726,14 +725,21 @@ body{
     }
 
     .featureList{
-        height:300px;
+        height:320px;
     }
 
     #inbillFimg{
-        height: 60px;
+        height: auto;
         margin-top: 0%;
     }
 
+    .overflowDiv {
+        top: 5%;
+    }
+
+    #invbillsvgdefault{
+        display: none;
+    }
 
     .featureImage img{
         width: 90%;
@@ -766,18 +772,20 @@ body{
 
     #barssvg1{
         width: 100%;
-        bottom: 10px;
+        bottom: 0px;
     }
 
     #insrepFeat:hover #barssvg1, #insrepFeat:hover #barsFimg{
         transition: all ease-in-out 300ms;
-        bottom:35px;
+        bottom:0;
     }
     #barnumsvg{
-        width: 45%;
+        width: 30%;
     }
     #barsnumFlow{
-        top: 20%;
+        top: 16%;
+        right: 4%;
+        z-index: 1;
     }
 
     .bdgersona img{
@@ -790,17 +798,46 @@ body{
         z-index:1
     }
 
+    #expenseFimg {
+        bottom:0 ;
+    }
+
     .bdgtOwner{
-        font-size: 0.55rem;
+        font-size: 0.4rem;
         margin-left: 0;
     }
     
     .budgtAmt{
-        font-size: 0.55rem;
+        font-size: 0.4rem;
     }
+
     #insrepFeat:hover #barsnumFlow{
         transition: all ease-in-out 300ms;
-        right: 11.5%;
+        right: 4%;
+    }
+
+    #vendorFimg {
+        left: 0;
+        margin-top: 6%;
+    }
+
+    #bdgtUsed1{
+        width: 60%;
+    }
+    #bdgtUsed2{
+        width: 40%;
+    }
+    #bdgtUsed3{
+        width: 92%;
+    }
+    #budgetsFimg {
+        bottom: 0;
+    }
+    .usdAmt{
+        display: block;
+    }
+    #budgetFeat{
+        height: 320px;
     }
 
   }
